--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "picqer/php-barcode-generator": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
